@@ -53,29 +53,29 @@ managed beans used:
         <f:facet name="body">
             <h:panel_group id="body">
 
-                <!--h:form formName="tabForm" -->
+                <x:tabbed_pane bgcolor="#FFFFCC" >
 
-                    <x:tabbed_pane>
+                    <p> A common paragraph </p>
 
-                        <x:tab id="tab1" label="Tab1">
-                            <h:input_text id="inp1"/><br>
-                            <h:input_text id="inp2"/>
-                        </x:tab>
+                    <x:tab id="tab1" label="Tab1">
+                        <h:input_text id="inp1"/><br>
+                        <h:input_text id="inp2"/>
+                    </x:tab>
 
-                        <x:tab id="tab2" label="Tab2">
-                            <h:input_textarea ></h:input_textarea>
-                        </x:tab>
+                    <x:tab id="tab2" label="Tab2">
+                        <h:input_textarea ></h:input_textarea>
+                    </x:tab>
 
-                        <x:tab id="tab3" label="Tab3">
-                            <h:input_text id="inp3"/><br>
-                            <h:input_text id="inp4"/><br>
-                            <h:input_text id="inp5"/><br>
-                        </x:tab>
+                    <x:tab id="tab3" label="Tab3">
+                        <h:input_text id="inp3"/><br>
+                        <h:input_text id="inp4"/><br>
+                        <h:input_text id="inp5"/><br>
+                    </x:tab>
 
-                    </x:tabbed_pane>
+                    <br>
+                    <h:command_button label="Common submit button" />
 
-                <!--/h:form -->
-
+                </x:tabbed_pane>
 
             </h:panel_group>
         </f:facet>
